Things coming together

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.15.0",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
@@ -36,7 +40,10 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-console": "off",
+      "no-debugger": "off"
+    }
   },
   "browserslist": [
     "> 1%",
